Logo height fixed on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1116,6 +1116,7 @@ ins {
 
 	.logo {
 		width: 200px;
+		height: 200px;
 	}
 
 	main {
